--- a/styles.css
+++ b/styles.css
@@ -27,8 +27,13 @@ body {
     text-align: center; /* center headings by default */
 }
 
-h1, h2, h3, h4 {
+h1, h2 {
     font-family: 'Kavoon', cursive;
+    margin: 0;
+}
+
+h3, h4 {
+    font-family: 'Inter', sans-serif;
     margin: 0;
 }
 
