--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ h1, h2 {
 
 h1 {
     font-size: 3em;
+    color: var(--white);
 }
 
 h2 {
@@ -62,12 +63,11 @@ header {
     background-color: var(--yellow);
     display: flex;
     justify-content: space-around;
-    padding: 10px;
+    padding: 10px 20px;
     position: absolute;
-    top: 0;
-    right: 0;
-    width: auto;
-    border-radius: 5px;
+    top: 20px;
+    right: 20px;
+    border-radius: 10px;
 }
 
 .navbar a {
@@ -78,21 +78,24 @@ header {
 
 .header-content {
     background-color: var(--lavender);
-    padding: 20px;
-    border-radius: 20px;
-    margin-top: 50px;
+    padding: 40px;
+    border-radius: 30px;
     text-align: center;
     width: 80%;
+    position: relative;
+    z-index: 1;
 }
 
 .sub-header {
     background-color: var(--pink);
-    padding: 10px;
-    border-radius: 20px;
-    margin-top: -15px;
+    padding: 15px;
+    border-radius: 30px;
     text-align: center;
     font-style: italic;
     width: 60%;
+    position: relative;
+    margin-top: -20px;
+    z-index: 0;
 }
 
 /*-------------------- MEDIA QUERY (medium) --------------------------------*/
@@ -111,7 +114,7 @@ header {
         width: 60%;
     }
     .sub-header {
-        width: 40%;
+        width: 45%;
     }
 }
 
@@ -121,6 +124,6 @@ header {
         width: 50%;
     }
     .sub-header {
-        width: 35%;
+        width: 40%;
     }
 }
